--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,24 @@
-#NotBlank.restaurante.nome=Nome do restaurante é obrigatório
-#NotBlank.cozinha.nome=Nome da cozinha é obrigatório
-
 NotBlank={0} é obrigatório
-#NotBlank.nome=Informe um nome, porque é obrigatório
+NotNull={0} é obrigatório
+PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
-nome=Nome
+#Cidade
+cidade.nome=O nome da cidade
+cidade.estado=O estado
+
+#Cozinha
+cozinha.id=Código da cozinha
+cozinha.nome=Nome da cozinha
+
+#Estado
+estado.id=Código do estado
+estado.nome=Nome do estado
+
+#Restaurante
+NotNull.restaurante.taxaFrete={0} é obrigatória
+NotNull.restaurante.cozinha={0} é obrigatória
+
 restaurante.nome=Nome do restaurante
+restaurante.taxaFrete = Taxa frete
+restaurante.cozinha = Cozinha
+restaurante.taxaFrete=Taxa de frete do restaurante
