Criando constraints de validação customizadas usando composição

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,12 @@
 NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
-PositiveOrZero={0} deve ser um valor maior ou igual a zero
+#PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
-#javax.validation.constraints.PositiveOrZero.message=deve ser um número positivo
-#TaxaFrete.invalida=Taxa frete está inválida, informe um valor positivo
+TaxaFrete.invalida={0} está inválida
 
 #Cidade
-cidade.nome=O nome da cidade
-cidade.estado=O estado
+cidade.nome=Nome da cidade
+cidade.estado=Estado da cidade
 
 #Cozinha
 cozinha.id=Código da cozinha
@@ -22,6 +21,5 @@ NotNull.restaurante.taxaFrete={0} é obrigatória
 NotNull.restaurante.cozinha={0} é obrigatória
 
 restaurante.nome=Nome do restaurante
-restaurante.taxaFrete = Taxa frete
-restaurante.cozinha = Cozinha
+restaurante.cozinha = Cozinha do restaurante
 restaurante.taxaFrete=Taxa de frete do restaurante
