--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,9 +17,9 @@ estado.id=Código do estado
 estado.nome=Nome do estado
 
 #Restaurante
-NotNull.restaurante.taxaFrete={0} é obrigatória
-NotNull.restaurante.cozinha={0} é obrigatória
+NotNull.restauranteInput.taxaFrete={0} é obrigatória
+NotNull.restauranteInput.cozinha={0} é obrigatória
 
-restaurante.nome=Nome do restaurante
-restaurante.cozinha = Cozinha do restaurante
-restaurante.taxaFrete=Taxa de frete do restaurante
+restauranteInput.nome=Nome do restaurante
+restauranteInput.cozinha = Cozinha do restaurante
+restauranteInput.taxaFrete=Taxa de frete do restaurante
