--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,16 +5,16 @@ PositiveOrZero={0} deve ser um valor maior ou igual a zero
 ValorZeroIncluiDescricao={1} deve conter {2}
 
 #Cidade
-cidade.nome=Nome da cidade
-cidade.estado=Estado da cidade
+cidadeInput.nome=Nome da cidade
+cidadeInput.estado=Estado da cidade
 
 #Cozinha
-cozinha.id=Código da cozinha
-cozinha.nome=Nome da cozinha
+cozinhaInput.id=Código da cozinha
+cozinhaInput.nome=Nome da cozinha
 
 #Estado
-estado.id=Código do estado
-estado.nome=Nome do estado
+estadoInput.id=Código do estado
+estadoInput.nome=Nome do estado
 
 #Restaurante
 NotNull.restauranteInput.taxaFrete={0} é obrigatória
