--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,3 +23,8 @@ NotNull.restauranteInput.cozinha={0} é obrigatória
 restauranteInput.nome=Nome do restaurante
 restauranteInput.cozinha = Cozinha do restaurante
 restauranteInput.taxaFrete=Taxa de frete do restaurante
+
+# Forma de pagamento
+NotBlank.formaPagamentoInput.descricao={0} é obrigatória
+formaPagamentoInput.id=Código da forma de pagamento
+formaPagamentoInput.descricao=Descrição da forma de pagamento
